# ta-indicators

./: .gitignore  Cargo.toml  README.md
scripts/: gen_parity_fixtures.py
src/: candles.rs  lib.rs
src/streaming/: adx.rs  choppiness.rs  hurst.rs  mod.rs  orderflow.rs  regime.rs  rsi.rs  sma.rs
tests/: talib_parity.rs  talib_parity_ht.rs
tests/fixtures/: talib_parity.json
